--- a/mobility_sensing/package.xml
+++ b/mobility_sensing/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>sensing</name>
+  <name>mobility_sensing</name>
   <version>0.0.0</version>
-  <description>The sensing package</description>
+  <description>The mobility_sensing package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/sensing</url> -->
+  <!-- <url type="website">http://wiki.ros.org/mobility_sensing</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
