--- a/mobility_sensing/package.xml
+++ b/mobility_sensing/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="ryan@todo.todo">ryan</maintainer>
+  <maintainer email="ryan.c.louie@gmail.com">Ryan Louie</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -44,10 +44,12 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>apriltags_ros</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>apriltags_ros</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
