--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <package>
-  <name>tango_test</name>
+  <name>mobility_games</name>
   <version>0.0.0</version>
-  <description>The tango_test package</description>
+  <description>The mobility_games package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="jryan@todo.todo">jryan</maintainer>
