--- a/mobility_games/cfg/WallAudio.cfg
+++ b/mobility_games/cfg/WallAudio.cfg
@@ -11,7 +11,7 @@ gen.add("pc_vol", bool_t, 0, "Modulate volume based on distance",   True)
 gen.add("pc_rate", bool_t, 0, "Modulate play rate based on distance",   True)
 gen.add("pc_track", bool_t, 0, "Use a track instead of a sin wave",   False)
 gen.add("pc_ding", bool_t, 0, "Use reward sound, currently a ding.",   False)
-gen.add("pc_randrange", double_t, 0, "Range of notes to choose.", .5, 0, 2)
+gen.add("pc_randrange", double_t, 0, "Range of notes to choose.", 1, 0, 2)
 gen.add("pc_key", str_t, 0, "Key that sounds are quantized to", "A")
 gen.add("pc_quanttype", str_t, 0, "Quantize Type: scale or chord", "chromatic")
 
