--- a/mobility_games/CMakeLists.txt
+++ b/mobility_games/CMakeLists.txt
@@ -93,6 +93,7 @@ catkin_python_setup()
 ## Generate dynamic reconfigure parameters in the 'cfg' folder
 generate_dynamic_reconfigure_options(
    cfg/WallAudio.cfg
+   cfg/SemanticWaypoints.cfg
 )
 
 ###################################
