--- a/mobility_games/CMakeLists.txt
+++ b/mobility_games/CMakeLists.txt
@@ -94,6 +94,7 @@ catkin_python_setup()
 generate_dynamic_reconfigure_options(
    cfg/WallAudio.cfg
    cfg/GridGame2.cfg
+   cfg/OriginalGridGame.cfg
 )
 
 
