Make revving every 10, plus linting

--- a/mobility_games/cfg/MusicalCane.cfg
+++ b/mobility_games/cfg/MusicalCane.cfg
@@ -9,7 +9,7 @@ mode_enum = gen.enum([	gen.const("Music",	str_t, "music", "Plays music while swe
 			gen.const("Sound",	str_t, "sound", "Plays a sound with each sweep.")],
 			"Sets the audio feedback mode.")
 
-gen.add("mode", str_t, 0, "Change mode of audio feedback.", "music", edit_method = mode_enum)
+gen.add("mode", str_t, 0, "Change mode of audio feedback.", "sound", edit_method = mode_enum)
 
 gen.add("sweep_tolerance", double_t, 0, "Time allowed between sweep points.", 2, 0, 5)
 gen.add("sweep_range", double_t, 0, "Width of sweep required, in camera frame.", 0.6, 0, 2)
