config helper functionality for sound files

--- a/mobility_games/cfg/WallAudio.cfg
+++ b/mobility_games/cfg/WallAudio.cfg
@@ -2,6 +2,9 @@
 PACKAGE = "mobility_games"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
+import os
+from rospkg import RosPack
+from configHelper import soundFinder
 
 gen = ParameterGenerator()
 
@@ -41,9 +44,14 @@ gen.add("rateDefault", double_t, 0, "Set Rate when not automated", 15, .33, 30)
 gen.add("T_________________Success__________________T", bool_t, 0, "Success Parameters", False)
 gen.add("ding", bool_t, 0, "Use reward sound, currently a ding.",   False)
 gen.add("successZoneSize", double_t, 0, "Size of the success Zone", .5, 0, 2)
+## SUCCESS SOUND FINDING
+soundFinder(gen);
+
 
 gen.add("T_________________Music__________________T", bool_t, 0, "Music Parameters", False)
 gen.add("track", bool_t, 0, "Use a track instead of a sin wave",   False)
+
+
 
 
 exit(gen.generate(PACKAGE, "mobility_games", "WallAudio"))
