Added music selection to dynamic reconfigure

--- a/mobility_games/cfg/MusicalCane.cfg
+++ b/mobility_games/cfg/MusicalCane.cfg
@@ -2,6 +2,7 @@
 PACKAGE = "mobility_games"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
+from configHelper import soundFinder
 
 gen = ParameterGenerator()
 
@@ -18,6 +19,9 @@ gen.add("reward_at_100", bool_t, 0, "Reward at 100", True)
 gen.add("reward_at_250", bool_t, 0, "Reward at 250", True)
 gen.add("reward_at_500", bool_t, 0, "Reward at 500", True)
 gen.add("reward_at_1000", bool_t, 0, "Reward at 1000", True)
+
+# create a dropdown for selecting a reward sound 
+soundFinder(gen, 'rewardSound')
 
 gen.add("count_sweeps", bool_t, 0, "Count Sweeps aloud, otherwise beep", True)
 
