Added sound config

--- a/mobility_games/cfg/SemanticWaypoints.cfg
+++ b/mobility_games/cfg/SemanticWaypoints.cfg
@@ -2,10 +2,12 @@
 PACKAGE = "mobility_games"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
+from configHelper import soundFinder
 
 gen = ParameterGenerator()
 
 #gen.add("pc_audio_gmode", str_t, 0, "Mode for sound information (p = pitch, v = volume, r = rate, t = tracks)",   'pvr')
 gen.add("proximity_to_destination", double_t, 0, "Change proximity sensitivity", 0.8, 0.5, 1.5)
+soundFinder(gen)
 
 exit(gen.generate(PACKAGE, "mobility_games", "SemanticWaypoints"))
