Added the reward sound to the games

--- a/mobility_games/cfg/OriginalGridGame.cfg
+++ b/mobility_games/cfg/OriginalGridGame.cfg
@@ -2,10 +2,12 @@
 PACKAGE = "mobility_games"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
+from configHelper import soundFinder
 
 gen = ParameterGenerator()
 
 
+soundFinder(gen)
 gen.add("pc_traveledDistance", double_t, 0, "The amount of distance being traveled.", 2, 1, 5)
 gen.add("pc_borderRadius", double_t, 0, "Radius of the border.", 5, 5, 10)
 
