--- a/mobility_games/cfg/GridGame2.cfg
+++ b/mobility_games/cfg/GridGame2.cfg
@@ -2,10 +2,12 @@
 PACKAGE = "mobility_games"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
+from configHelper import soundFinder
 
 gen = ParameterGenerator()
 
 
+soundFinder(gen)
 gen.add("pc_traveledDistance", double_t, 0, "The amount of distance being traveled.", 2, 1, 5)
 gen.add("pc_distanceFromWall", double_t, 0, "The distance from the wall.", 1.5, 0.5, 3)
 
